# auto-delete-path

./: Cargo.toml  README.md
src/: lib.rs
src/test-resources/: test-include.txt
