[package]
name = "auto-delete-path"
version = "0.1.0"
authors = ["Thanasis Katsios <thkatsios@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple PathBuf wrapper that gets deleted when it goes out of scope"
documentation = "https://docs.rs/auto-delete-path"
repository = "https://github.com/thanasis2028/auto-delete-path"
readme = "README.md"
keywords = ["temp", "test", "path", "delete"]
categories = ["development-tools::testing", "filesystem"]
edition = "2018"
